# orderitem-ocr-detect

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: __init__.py  config.py  field_quality.py  fields.py  visualization.py
app/controllers/api/v1/: ocr_controller.py
app/models/: ocr_models.py
app/repositories/: ocr_result_repository.py
app/schemas/: ocr_schema.py  response_schema.py
app/services/: field_extraction.py  field_quality.py  image_service.py  ocr_service.py  orientation_service.py  paddle_ocr_provider.py  visualization_service.py
app/views/: json_response.py
doc/: current-stage-recognition-process.md  ocr-requirement-evaluation-plan.md  phase-one-validation-report.md
docs/superpowers/plans/: 2026-06-16-flask-mvc-ocr-api-implementation.md  2026-06-16-ocr-api-follow-up-improvements.md
docs/superpowers/specs/: 2026-06-16-flask-mvc-ocr-api-design.md
models/: README.md
src/unicom_ocr_detect/: __init__.py  field_quality.py  fields.py  images.py  ocr_result.py  run_validation.py  visualization.py
tests/: test_api.py  test_repository_and_image_service.py  test_validation_harness.py
