[project]
name = "unicom-ocr-detect"
version = "0.1.0"
description = "OCR JSON API for mobile app order pages."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "flask>=3.0.0",
    "paddleocr>=3.3.0",
    "paddlepaddle>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
